--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
             <div class="left" data-aos="flip-down">
                 <h1>J.N. Trust</h1>
-                <p>M.R. Trust is a community of diverse people sharing a set of common values: excellence, sincerity,
+                <p>J.N. Trust is a community of diverse people sharing a set of common values: excellence, sincerity,
                     social justice, compassion, and custodianship. Vision Working together for a world free of poverty.
                     Values these traits express the belief and define the culture of the organization. We remain guided
                     by the timeless values and teachings provided by the revelations contained within the Qur’an and
